--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,8 +9,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-  - package-ecosystem: "maven" # See documentation for possible values
-    directories:
-      - "/"
+  - package-ecosystem: "maven"
+    directory: "/log"
     schedule:
       interval: "weekly"
