--- a/eventadmin/pom.xml
+++ b/eventadmin/pom.xml
@@ -23,8 +23,8 @@
 
   <parent>
     <groupId>org.apache.felix</groupId>
-    <artifactId>felix</artifactId>
-    <version>1.0.4</version>
+    <artifactId>felix-parent</artifactId>
+    <version>9</version>
     <relativePath>../pom/pom.xml</relativePath>
   </parent>
 
